feature android swipe loading

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="" />
         <activity
-            android:name=".ui.main.payment.PaymentActivity"
+            android:name=".ui.payment.PaymentActivity"
             android:exported="false" />
         <activity
             android:name=".ui.chat.ChatActivity"
