--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,20 +7,16 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
 
     <application
         android:name=".PolyApplication"
@@ -34,38 +30,31 @@
         android:theme="@style/Theme.PolyFriend"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDLGnA0iUrnteqE1NsqqcKRu5eqj5NERXQ" />
+            android:value="" />
 
         <activity
             android:name=".ui.payment.PaymentActivity"
             android:exported="false"
             android:parentActivityName=".ui.main.MainActivity" />
-
         <activity
             android:name=".ui.chat.ChatActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-
             android:parentActivityName=".ui.main.MainActivity"
-        />
-
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-
-            android:parentActivityName=".ui.security.SplashScreenActivity"/>
-
+            android:parentActivityName=".ui.security.SplashScreenActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.security.LoginActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-
-            android:parentActivityName=".ui.security.SplashScreenActivity" />
-
+            android:parentActivityName=".ui.security.SplashScreenActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.security.SplashScreenActivity"
             android:exported="true"
@@ -79,15 +68,20 @@
         </activity>
 
         <service
-            android:name=".ui.notification.FcmService"
+            android:name=".ui.notification.service.FcmService"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@drawable/icon_app" />
-        <meta-data android:name="com.google.firebase.messaging.default_notification_color" android:resource="@color/black" />
+        <receiver android:name=".ui.notification.receiver.MyReceiver"/>
 
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/icon_app" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/black" />
     </application>
 
 </manifest>
