--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
             android:name=".ui.main.MainActivity"
             android:exported="false"
             android:parentActivityName=".ui.security.SplashScreenActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            tools:ignore="AppLinkUrlError"/>
         <activity
             android:name=".ui.security.LoginActivity"
             android:exported="false"
@@ -64,6 +65,16 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data
+                    android:scheme="http"
+                    android:host="192.168.31.98:3000"
+                    android:pathPrefix="/api/admin/products"/>
             </intent-filter>
         </activity>
 
