--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,16 +33,18 @@
         tools:targetApi="31">
         <meta-data android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
             android:value="true"/>
-        <activity
-            android:name=".ui.call.CallActivity"
-            android:exported="false" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDLGnA0iUrnteqE1NsqqcKRu5eqj5NERXQ" />
 
         <activity
+            android:name=".ui.call.CallActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />
+        <activity
             android:name=".ui.payment.PaymentActivity"
             android:exported="false"
+            android:screenOrientation="portrait"
             android:parentActivityName=".ui.main.MainActivity" />
         <activity
             android:name=".ui.chat.ChatActivity"
